--- a/.github/workflows/docs-deployment-unstable.yml
+++ b/.github/workflows/docs-deployment-unstable.yml
@@ -20,19 +20,19 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install sphinx
+          cd src/bonsai/docs  # Navigate to the docs directory
+          pip install -r requirements.txt  # Install dependencies from requirements.txt
 
       - name: Build documentation
         run: |
-          cd src/bonsai/docs
-          make html
+          cd src/bonsai/docs  # Navigate to the docs directory
+          make html  # Build the documentation
 
       - name: Deploy to GitHub Pages (Unstable)
         uses: peaceiris/actions-gh-pages@v4
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          external_repository: IfcOpenShell/bonsaibim_org_docs_unstable
-          publish_branch: main
-          cname: docs-unstable.bonsaibim.org
-          publish_dir: src/bonsai/docs/_build/html
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}  # SSH key for deployment
+          external_repository: IfcOpenShell/bonsaibim_org_docs_unstable  # Target repository
+          publish_branch: main  # Branch to deploy to
+          cname: docs-unstable.bonsaibim.org  # Custom domain for unstable docs
+          publish_dir: src/bonsai/docs/_build/html  # Directory containing built docs
